--- a/GymProject/Windows/MainWindow.xaml
+++ b/GymProject/Windows/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GymProject"
         mc:Ignorable="d"
-        Title="Главное меню" Height="450" Width="800" WindowStartupLocation="CenterScreen" MinHeight="200" MinWidth="300" MaxHeight="500" MaxWidth="1000">
+        Title="Главное меню" Height="460" Width="800" WindowStartupLocation="CenterScreen" MinHeight="350" MinWidth="650">
     <Grid>
            <Frame x:Name="MainFrame" NavigationUIVisibility="Hidden" Source="/Pages/MenuPage.xaml"/>
         
