--- a/GymProject/Pages/LessonProgramsPage.xaml
+++ b/GymProject/Pages/LessonProgramsPage.xaml
@@ -6,35 +6,66 @@
       xmlns:local="clr-namespace:GymProject.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Программы занятий">
+      Title="Программы занятий"
+      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+     TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+     TextElement.FontWeight="Regular"
+     TextElement.FontSize="13"
+     TextOptions.TextFormattingMode="Ideal"
+     TextOptions.TextRenderingMode="Auto"
+     Background="{DynamicResource MaterialDesignPaper}"
+     FontFamily="{DynamicResource MaterialDesignFont}">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width ="*"/>
+            <ColumnDefinition Width ="*"/>
+            <ColumnDefinition Width ="*"/>
+            <ColumnDefinition Width ="*"/>
+            <ColumnDefinition Width ="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid Grid.ColumnSpan="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width ="*"/>
+                <ColumnDefinition Width ="*"/>
+            </Grid.ColumnDefinitions>
+            <Viewbox Grid.RowSpan="3" Margin="10">
+                <Image Source="C:\Users\user\source\repos\GymProjectgit\GymProject\GymLabel.png" Margin="8,11,0,0"/>
+            </Viewbox>
 
-    <StackPanel>
-        <StackPanel Orientation="Horizontal" Margin="0 0 0 0">
-            <StackPanel HorizontalAlignment="Left" Margin="0 0 400 0">
-                <StackPanel Orientation="Horizontal">
-                    <Image Source="C:\Users\user\source\repos\GymProjectgit\GymProject\GymLabel.png"  Height="63" Margin="8,11,0,0" Width="57"/>
-                    <Label Content="Спортивный зал 'Deja Vu'" Height="33" Width="158"/>
-                </StackPanel>
-            </StackPanel>
-            <StackPanel >
-                <Button Content="Выйти в меню" Width="150" Margin="0 20 20 0" Click="Button_Click"/>
-            </StackPanel>
-        </StackPanel>
-        <StackPanel HorizontalAlignment="Left" Margin="50 0" Width="378" Height="44">
-            <Grid>
-                <TextBox Height="25" BorderThickness="1" Margin="85,0,11,0"/>
-                <Button Content="1" Background="Black" Margin="23,4,311,5"/>
-            </Grid>
-        </StackPanel>
-        <StackPanel Orientation="Horizontal">
-            <StackPanel Margin="20 0" Height="273" Width="600" Background="#E6E6FA" Opacity="0.8">
-            </StackPanel>
-            <StackPanel Height="270" Width="153">
-                <Button Content="Добавить" Margin="0 10" Height="50" Width="120"/>
-                <Button Content="Удалить" Margin="0 5" Height="50" Width="120"/>
-                <Button Content="Обновить" Margin="0 10" Height="50" Width="120"/>
-                <Button Content="Изменить" Margin="0 5" Height="50" Width="120"/>
-            </StackPanel>
-        </StackPanel>
-    </StackPanel>
+        </Grid>
+        <materialDesign:Card Padding="5" Margin="16" Grid.Row="1" Grid.Column="0" Grid.RowSpan="4" Grid.ColumnSpan="4" BorderThickness="0">
+            <DataGrid Style="{DynamicResource MaterialDesignTitleTextBlock}" Background="Transparent" Grid.Row="1" Grid.Column="0" Grid.RowSpan="4" Grid.ColumnSpan="4" />
+        </materialDesign:Card>
+        <Grid Grid.Column="1" Grid.ColumnSpan="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width ="*"/>
+                <ColumnDefinition Width ="*"/>
+            </Grid.ColumnDefinitions>
+            <Viewbox Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="0" Margin="5">
+                <Label Content="Спортивный зал 'Deja Vu'"  FontSize="13" />
+            </Viewbox>
+            <TextBox Height="25" BorderThickness="1" Margin="10 0" Grid.Column="1" Grid.Row="2"/>
+            <Button Content="Найти" Background="Black" Margin="10 0" Grid.Row="1" Grid.Column="0"/>
+        </Grid>
+        <Button Content="Выйти в меню"  Click="Button_Click" Grid.Row="0" Grid.Column="4"/>
+        <Button Content="Добавить" Margin="0 10" Height="50" Width="120" Grid.Row="1" Grid.Column="4"/>
+        <Button Content="Удалить" Margin="0 5" Height="50" Width="120" Grid.Row="2" Grid.Column="4" />
+        <Button Content="Обновить" Margin="0 10" Height="50" Width="120" Grid.Row="3" Grid.Column="4" />
+        <Button Content="Изменить" Margin="0 5" Height="50" Width="120" Grid.Row="4" Grid.Column="4"/>
+    </Grid>
 </Page>
