--- a/GymProject/Windows/AuthWindow.xaml
+++ b/GymProject/Windows/AuthWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GymProject.Windows"
         mc:Ignorable="d"
-        Title="Окно авторизации" Height="450" Width="800" WindowStartupLocation="CenterScreen">
+        Title="Окно авторизации" Height="450" Width="800" MinHeight="250" MinWidth="400" WindowStartupLocation="CenterScreen">
     <StackPanel HorizontalAlignment="Center" Height="200" Width="250">
         <Label Content="Логин" />
         <TextBox Width="250" TextDecorations="Underline" />
