--- a/GymProject/Windows/LessonProgramsWindow.xaml
+++ b/GymProject/Windows/LessonProgramsWindow.xaml
@@ -5,6 +5,6 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GymProject.Windows"
         mc:Ignorable="d"
-        Title="Программы занятий" Height="450" Width="800" WindowStartupLocation="CenterScreen">
+        Title="Программы занятий" Height="460" Width="800" WindowStartupLocation="CenterScreen" MinHeight="350" MinWidth="650">
     <Frame x:Name="LessonProgramsFrame" NavigationUIVisibility="Hidden" Source="/Pages/LessonProgramsPage.xaml"/>
 </Window>
