--- a/GymProject/Windows/LessonsWindow.xaml
+++ b/GymProject/Windows/LessonsWindow.xaml
@@ -5,6 +5,6 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GymProject.Windows"
         mc:Ignorable="d"
-        Title="Занятие" Height="450" Width="800" WindowStartupLocation="CenterScreen">
+        Title="Занятие" Height="460" Width="800" WindowStartupLocation="CenterScreen" MinHeight="350" MinWidth="650">
     <Frame x:Name="LessonsFrame" NavigationUIVisibility="Hidden" Source="/Pages/LessonsPage.xaml"/>
 </Window>
