--- a/GymProject/Windows/SubscriptionsWindow.xaml
+++ b/GymProject/Windows/SubscriptionsWindow.xaml
@@ -5,6 +5,6 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GymProject.Windows"
         mc:Ignorable="d"
-        Title="Абонементы" Height="450" Width="800" WindowStartupLocation="CenterScreen">
+        Title="Абонементы" Height="460" Width="800" WindowStartupLocation="CenterScreen" MinHeight="350" MinWidth="650">
     <Frame x:Name="SubscriptionsFrame" NavigationUIVisibility="Hidden" Source="/Pages/SubscriptionsPage.xaml"/>
 </Window>
