--- a/GymProject/Pages/EmployeesPage.xaml
+++ b/GymProject/Pages/EmployeesPage.xaml
@@ -45,7 +45,19 @@
 
         </Grid>
         <materialDesign:Card Padding="5" Margin="16" Grid.Row="1" Grid.Column="0" Grid.RowSpan="4" Grid.ColumnSpan="4" BorderThickness="0">
-            <DataGrid Style="{DynamicResource MaterialDesignTitleTextBlock}" Background="Transparent" Grid.Row="1" Grid.Column="0" Grid.RowSpan="4" Grid.ColumnSpan="4" />
+            <DataGrid Style="{DynamicResource MaterialDesignTitleTextBlock}" Background="Transparent" Grid.Row="1" Grid.Column="0" Grid.RowSpan="4" Grid.ColumnSpan="4" AutoGenerateColumns="False" SelectionChanged="DataGrid_SelectionChanged" >
+                <DataGrid.Columns>
+                    <materialDesign:DataGridTextColumn CanUserReorder="False" Binding="{Binding Name}"/>
+                    <materialDesign:DataGridTextColumn CanUserReorder="False" Binding="{Binding SurnName}"/>
+                    <materialDesign:DataGridTextColumn CanUserReorder="False" Binding="{Binding MiddleName}"/>
+                    <materialDesign:DataGridTextColumn CanUserReorder="False" Binding="{Binding DateOfBirth}"/>
+                    <materialDesign:DataGridTextColumn CanUserReorder="False" Binding="{Binding Gender}"/>
+                    <materialDesign:DataGridTextColumn CanUserReorder="False" Binding="{Binding LengthOfService}"/>
+                    <materialDesign:DataGridTextColumn CanUserReorder="False" Binding="{Binding Login}"/>
+                    <materialDesign:DataGridTextColumn CanUserReorder="False" Binding="{Binding Password}"/>
+                    <materialDesign:DataGridTextColumn CanUserReorder="False" Binding="{Binding IDPosition}"/>
+                </DataGrid.Columns>
+            </DataGrid>
         </materialDesign:Card>
         <Grid Grid.Column="1" Grid.ColumnSpan="2">
             <Grid.RowDefinitions>
