--- a/GymProject/Pages/LessonProgramsPage.xaml
+++ b/GymProject/Pages/LessonProgramsPage.xaml
@@ -45,7 +45,13 @@
 
         </Grid>
         <materialDesign:Card Padding="5" Margin="16" Grid.Row="1" Grid.Column="0" Grid.RowSpan="4" Grid.ColumnSpan="4" BorderThickness="0">
-            <DataGrid Style="{DynamicResource MaterialDesignTitleTextBlock}" Background="Transparent" Grid.Row="1" Grid.Column="0" Grid.RowSpan="4" Grid.ColumnSpan="4" />
+            <DataGrid Style="{DynamicResource MaterialDesignTitleTextBlock}" Background="Transparent" Grid.Row="1" Grid.Column="0" Grid.RowSpan="4" Grid.ColumnSpan="4" AutoGenerateColumns="False" SelectionChanged="DataGrid_SelectionChanged" >
+                <DataGrid.Columns>
+                    <materialDesign:DataGridTextColumn CanUserReorder="False" Binding="{Binding Name}"/>
+                    <materialDesign:DataGridTextColumn CanUserReorder="False" Binding="{Binding Description}"/>
+                    <materialDesign:DataGridTextColumn CanUserReorder="False" Binding="{Binding ProgramDuration}"/>
+                </DataGrid.Columns>
+            </DataGrid>
         </materialDesign:Card>
         <Grid Grid.Column="1" Grid.ColumnSpan="2">
             <Grid.RowDefinitions>
