--- a/GymProject/Pages/SubscriptionsPage.xaml
+++ b/GymProject/Pages/SubscriptionsPage.xaml
@@ -45,7 +45,17 @@
             
         </Grid>
         <materialDesign:Card Padding="5" Margin="16" Grid.Row="1" Grid.Column="0" Grid.RowSpan="4" Grid.ColumnSpan="4" BorderThickness="0">
-            <DataGrid Style="{DynamicResource MaterialDesignTitleTextBlock}" Background="Transparent" Grid.Row="1" Grid.Column="0" Grid.RowSpan="4" Grid.ColumnSpan="4" />
+            <DataGrid Style="{DynamicResource MaterialDesignTitleTextBlock}" Background="Transparent" Grid.Row="1" Grid.Column="0" Grid.RowSpan="4" Grid.ColumnSpan="4" AutoGenerateColumns="False" SelectionChanged="DataGrid_SelectionChanged" >
+                <DataGrid.Columns>
+                    <materialDesign:DataGridTextColumn CanUserReorder="False" Binding="{Binding ID}"/>
+                    <materialDesign:DataGridTextColumn CanUserReorder="False" Binding="{Binding ValidityStartDate}"/>
+                    <materialDesign:DataGridTextColumn CanUserReorder="False" Binding="{Binding ValidityExpirationDate}"/>
+                    <materialDesign:DataGridTextColumn CanUserReorder="False" Binding="{Binding TrainerId}"/>
+                    <materialDesign:DataGridTextColumn CanUserReorder="False" Binding="{Binding ClientId}"/>
+                    <materialDesign:DataGridTextColumn CanUserReorder="False" Binding="{Binding StatusId}"/>
+                    <materialDesign:DataGridTextColumn CanUserReorder="False" Binding="{Binding SubscriptionTypeId}"/>
+                </DataGrid.Columns>
+            </DataGrid>
         </materialDesign:Card>
         <Grid Grid.Column="1" Grid.ColumnSpan="2">
             <Grid.RowDefinitions>
