--- a/GymProject/Windows/MainWindow.xaml
+++ b/GymProject/Windows/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GymProject"
         mc:Ignorable="d"
-        Icon="C:\Users\user\source\repos\GymProjectgit — копия — копия\GymProject\dumbbell.png"
+        Icon="../dumbbell.png"
         Title="Главное меню" Height="460" Width="800" WindowStartupLocation="CenterScreen" MinHeight="350" MinWidth="650">
     <Grid>
            <Frame x:Name="MainFrame" NavigationUIVisibility="Hidden" Source="/Pages/MenuPage.xaml"/>
