--- a/GymProject/Windows/AuthWindow.xaml
+++ b/GymProject/Windows/AuthWindow.xaml
@@ -11,7 +11,7 @@
         <Label  Content="Логин" />
         <TextBox x:Name="login" Width="250" TextDecorations="Underline" />
         <Label Content="Пароль" />
-        <TextBox x:Name="password" Width="250"/>
+        <PasswordBox x:Name="password" Width="250"/>
         <Button Content="Войти" Margin="0 20 0 5" Click="Button_Click"/>
         <Button x:Name="Guest" Content="Войти как гость" Click="Guest_Click"/>
     </StackPanel>
