--- a/GymProject/Pages/MenuPage.xaml
+++ b/GymProject/Pages/MenuPage.xaml
@@ -13,7 +13,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*" />
-            <RowDefinition Height="*"/>
+            <RowDefinition x:Name="row" Height="*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width ="*"/>
@@ -21,13 +21,13 @@
             <ColumnDefinition Width ="*"/>
         </Grid.ColumnDefinitions>
         <Button x:Name="Clients"  Content="Клиенты" Grid.Row="2" Margin="30" Click="Clients_Click" />
-        <Button x:Name="Subscriptions" Content="Абонементы" Grid.Row="2" Grid.Column="1" Margin="30" Click="Subscriptions_Click"  />
+        <Button x:Name="Subscriptions" Content="Абонементы" Grid.Row="1" Margin="30" Click="Subscriptions_Click"  />
 
         <Button x:Name="Lessons" Content="Занятия" Grid.Row="1" Grid.Column="1" Margin="30" Click="Lessons_Click"   />
-        <Button x:Name="Products" Content="Товары" Grid.Row="1" Margin="30" Click="Products_Click" />
+        <Button x:Name="Products" Content="Товары" Grid.Row="2" Grid.Column="1" Margin="30" Click="Products_Click" />
 
         <Button x:Name="LessonProgramms"  Content="Программы занятий" Grid.Row="1" Grid.Column="2" Margin="30" Click="LessonProgramms_Click" />
-        <Button x:Name="Employees" Content="Сотрудники" Grid.Row="2" Grid.Column="2" Margin="30" Click="Employees_Click" />
+        <Button x:Name="Employees" Content="Сотрудники"  Grid.Row="2" Grid.Column="2" Margin="30" Click="Employees_Click" />
 
         <Button x:Name="Exit" Content="Выйти" Grid.Row="0" Grid.Column="2" Margin="30" Click="Exit_Click"/>
         
