--- a/GymProject/Pages/ProductsPage.xaml
+++ b/GymProject/Pages/ProductsPage.xaml
@@ -67,8 +67,8 @@
             <Viewbox Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="0" Margin="5">
                 <Label Content="Спортивный зал 'Deja Vu'"  FontSize="13" />
             </Viewbox>
-            <TextBox Height="25" BorderThickness="1" Margin="10 0" Grid.Column="1" Grid.Row="2"/>
-            <Button Content="Найти" Background="Black" Margin="10 0" Grid.Row="1" Grid.Column="0"/>
+            <TextBox  x:Name="find" Height="25" BorderThickness="1" Margin="10 0" Grid.Column="1" Grid.Row="2"/>
+            <Button Content="Найти" Background="Black" Margin="10 0" Grid.Row="1" Grid.Column="0" Click="Button_Click"/>
         </Grid>
         <Button Content="Выйти в меню"  Click="Exit_Click"  Grid.Row="0" Grid.Column="4"/>
         <Button Content="Добавить" Margin="0 10" Height="50" Click="Add_Click"  Width="120" Grid.Row="1" Grid.RowSpan="2" Grid.Column="4"/>
