--- a/GymProject/Pages/SubscriptionsPage.xaml
+++ b/GymProject/Pages/SubscriptionsPage.xaml
@@ -85,12 +85,12 @@
             <Viewbox Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="0" Margin="5">
                 <Label Content="Спортивный зал 'Deja Vu'"  FontSize="13" />
             </Viewbox>
-            <TextBox Height="25" BorderThickness="1" Margin="10 0" Grid.Column="1" Grid.Row="2"/>
-            <Button Content="Найти" Background="Black" Margin="10 0" Grid.Row="1" Grid.Column="0"/>
+            <TextBox x:Name="find" Height="25" BorderThickness="1" Margin="10 0" Grid.Column="1" Grid.Row="2"/>
+            <Button Content="Найти" Background="Black" Margin="10 0" Grid.Row="1" Grid.Column="0" Click="Button_Click"/>
         </Grid>
         <Button Content="Выйти в меню"  Click="Exit_Click"  Grid.Row="0" Grid.Column="4"/>
-        <Button Content="Добавить" Click="Add_Click"  Margin="0 10" Height="50" Width="120" Grid.Row="1" Grid.RowSpan="2" Grid.Column="4"/>
-        <Button Content="Удалить" Margin="0 5" Click="Delete_Click"  Height="50" Width="120" Grid.Row="2" Grid.RowSpan="2" Grid.Column="4" />
-        <Button Content="Изменить" Margin="0 5" Height="50" Click="Change_Click"  Width="120" Grid.Row="3" Grid.RowSpan="2" Grid.Column="4"/>
+        <Button x:Name="add" Content="Добавить" Click="Add_Click"  Margin="0 10" Height="50" Width="120" Grid.Row="1" Grid.RowSpan="2" Grid.Column="4"/>
+        <Button x:Name="del" Content="Удалить" Margin="0 5" Click="Delete_Click"  Height="50" Width="120" Grid.Row="2" Grid.RowSpan="2" Grid.Column="4" />
+        <Button x:Name="change" Content="Изменить" Margin="0 5" Height="50" Click="Change_Click"  Width="120" Grid.Row="3" Grid.RowSpan="2" Grid.Column="4"/>
        </Grid>      
 </Page>
