--- a/GymProject/Windows/AuthWindow.xaml
+++ b/GymProject/Windows/AuthWindow.xaml
@@ -9,9 +9,9 @@
         Title="Окно авторизации" Height="202" Width="225" MinHeight="250" MinWidth="400" WindowStartupLocation="CenterScreen">
     <StackPanel HorizontalAlignment="Center" Height="200" Width="250">
         <Label  Content="Логин" />
-        <TextBox x:Name="login" Width="250" TextDecorations="Underline" />
+        <TextBox x:Name="Login" Width="250"/>
         <Label Content="Пароль" />
-        <PasswordBox x:Name="password" Width="250"/>
+        <PasswordBox x:Name="Password" Width="250"/>
         <Button Content="Войти" Margin="0 20 0 5" Click="Button_Click"/>
         <Button x:Name="Guest" Content="Войти как гость" Click="Guest_Click"/>
     </StackPanel>
