--- a/GymProject/Pages/ClientsPage.xaml
+++ b/GymProject/Pages/ClientsPage.xaml
@@ -74,9 +74,11 @@
             <TextBox x:Name="find" Height="25" BorderThickness="1" Margin="10 0" Grid.Column="1" Grid.Row="2"/>
             <Button  Content="Найти" Background="Black" Margin="10 0" Grid.Row="1" Grid.Column="0" Click="Button_Click"/>
         </Grid>
+        <Button x:Name="QR" Content="QR" Click="GenerateButton_Click"  Grid.Row="0" Grid.Column="3" Margin="10 0" />
         <Button x:Name="Exit" Content="Выйти в меню"  Click="Exit_Click"  Grid.Row="0" Grid.Column="4"/>
-        <Button x:Name="Add" Content="Добавить" Click="Add_Click"  Margin="0 10" Height="50" Width="120" Grid.Row="1" Grid.RowSpan="2" Grid.Column="4" />
-        <Button x:Name="Delete" Content="Удалить" Margin="0 5" Click="Delete_Click" Height="50" Width="120" Grid.Row="2" Grid.RowSpan="2" Grid.Column="4" />
-        <Button x:Name="Change" Content="Изменить" Margin="0 5" Click="Change_Click" Height="50" Width="120" Grid.Row="3" Grid.RowSpan="2" Grid.Column="4"/>
+        <Button x:Name="Export" Content="Выгрузить" Click="ExportButton_Click"  Margin="0 10" Height="50" Width="120" Grid.Row="1" Grid.Column="4"/>
+        <Button x:Name="Add" Content="Добавить" Click="Add_Click"  Margin="0 10" Height="50" Width="120" Grid.Row="2" Grid.Column="4" />
+        <Button x:Name="Delete" Content="Удалить" Margin="0 5" Click="Delete_Click" Height="50" Width="120" Grid.Row="3" Grid.Column="4" />
+        <Button x:Name="Change" Content="Изменить" Margin="0 5" Click="Change_Click" Height="50" Width="120" Grid.Row="4" Grid.Column="4"/>
     </Grid>
 </Page>
