--- a/GymProject/Pages/LessonsPage.xaml
+++ b/GymProject/Pages/LessonsPage.xaml
@@ -47,21 +47,6 @@
         <materialDesign:Card Padding="5" Margin="16" Grid.Row="1" Grid.Column="0" Grid.RowSpan="4" Grid.ColumnSpan="4" BorderThickness="0">
             <DataGrid x:Name="LessonsGrid" CanUserSortColumns="True"  IsReadOnly="True" Style="{DynamicResource MaterialDesignTitleTextBlock}" Background="Transparent" Grid.Row="1" Grid.Column="0" Grid.RowSpan="4" Grid.ColumnSpan="4" AutoGenerateColumns="False"  >
                 <DataGrid.Columns>
-                    <DataGridTemplateColumn Header="Клиент" CanUserReorder="False" >
-                        <DataGridTemplateColumn.CellTemplate>
-                            <DataTemplate>
-                                <TextBlock>
-                                    <TextBlock.Text>
-                                        <MultiBinding StringFormat="{}{0} {1} {2}" >
-                                            <Binding Path="Subscription.Client.Name"/>
-                                            <Binding Path="Subscription.Client.MiddleName"/>
-                                            <Binding Path="Subscription.Client.SecondName"/>
-                                        </MultiBinding>
-                                    </TextBlock.Text>
-                                </TextBlock>
-                            </DataTemplate>
-                        </DataGridTemplateColumn.CellTemplate>
-                    </DataGridTemplateColumn>
                     <materialDesign:DataGridTextColumn Header="Абонемент" CanUserReorder="False" Binding="{Binding Subscription.Subscription_type.Name}"/>
                     <materialDesign:DataGridTextColumn Header="Дата и время занятия" CanUserReorder="False" Binding="{Binding DateAndTime}"/>
                     <materialDesign:DataGridTextColumn Header="Номер зала" CanUserReorder="False" Binding="{Binding Hall.HallNumber}"/>
@@ -89,8 +74,9 @@
         </Grid>
         <Button x:Name="QR" Content="QR" Click="GenerateButton_Click"  Grid.Row="0" Grid.Column="3" Margin="10 0" />
         <Button Content="Выйти в меню"  Click="Exit_Click"  Grid.Row="0" Grid.Column="4"/>
-        <Button x:Name="add" Content="Добавить" Margin="0 10 0 0" Click="Add_Click"  Height="50" Width="120" Grid.Row="2" Grid.RowSpan="2" Grid.Column="4"/>
-        <Button x:Name="del" Content="Удалить" Margin="0 40 0 80" Click="Delete_Click"  Height="50" Width="120" Grid.Row="3" Grid.RowSpan="2" Grid.Column="4" />
-        <Button x:Name="change" Content="Изменить" Click="Change_Click"  Margin="0 5" Height="50" Width="120" Grid.Row="4" Grid.RowSpan="2" Grid.Column="4"/>
+        <Button x:Name="Export" Content="Выгрузить" Click="ExportButton_Click"  Margin="0 10" Height="50" Width="120" Grid.Row="1" Grid.Column="4"/>
+        <Button x:Name="add" Content="Добавить" Margin="0 10 " Click="Add_Click"  Height="50" Width="120" Grid.Row="2" Grid.Column="4"/>
+        <Button x:Name="del" Content="Удалить" Margin="0 10" Click="Delete_Click"  Height="50" Width="120" Grid.Row="3"  Grid.Column="4" />
+        <Button x:Name="change" Content="Изменить" Click="Change_Click"  Margin="0 5" Height="50" Width="120" Grid.Row="4"  Grid.Column="4"/>
     </Grid>
 </Page>
